log
Wed 24 Apr 2024 07:53:58 PM UTC: 
 tests:  0|6
total_score: 0/70
9c4bd6d
Wed 24 Apr 2024 08:06:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘mapa’ [-Werror=unused-variable]
   43 | HashMap* mapa = (HashMap *) map;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
ec69989
Wed 24 Apr 2024 08:22:05 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a8a302e
Wed 24 Apr 2024 08:26:48 PM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
b571855
Wed 24 Apr 2024 08:44:35 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1ddae53
Wed 24 Apr 2024 08:49:30 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  5|4
total_score: 30/70
6e47802
Wed 24 Apr 2024 08:49:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
fa0d959
Wed 24 Apr 2024 08:53:53 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
45107d8
Wed 24 Apr 2024 09:00:54 PM UTC: 
 hashmap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
feb7e0b
Wed 24 Apr 2024 09:02:47 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:103:51: error: expected ‘)’ before ‘{’ token
  103 |       if(is_equal(map->buckets[posicion]->key,key)
      |         ~                                         ^
      |                                                   )
  104 |       {
      |       ~                                            
hashmap.c:110:5: error: expected expression before ‘}’ token
  110 |     }
      |     ^
Compilation failed
0426948
Wed 24 Apr 2024 09:02:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
bdaed96
Wed 24 Apr 2024 09:05:01 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
0d79ac4
